k8s/base/deployment.yaml
# FYI: This deployment is not the one we're using in production.
# The production deployment is in ensembl-k8s-manifests/ensembl-web-metadata-api/deployment.yaml repo
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadata-api-server
  template:
    metadata:
      annotations:
        fluentbit.io/parser_stderr: json
      labels:
        app: metadata-api-server
    spec:
      imagePullSecrets:
        - name: ensemblweb-pull-secret 
      containers:
        - name: metadata-api
          image: DOCKER_IMAGE
          ports:
            - containerPort: 8014
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - |
              mkdir -p /tmp/prometheus-metrics
              rm -f /tmp/prometheus-metrics/*.db
              exec uvicorn api.main:app \
                --host 0.0.0.0 \
                --port 8014
