k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-api-svc
  labels:
    app: metadata-api-svc
spec:
  selector:
    ensembl.web.api.name: metadata-api-server
  type: ClusterIP
  ports:
    - port: 8014
      protocol: TCP
      targetPort: 8014
