k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metadata-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: host
    http:
      paths:
      - backend:
          service:
            name: metadata-api-svc
            port:
              number: 8014
        path: /api/metadata
        pathType: Prefix
